Ocean modifier animation not working with NLA action-strip #45938

Closed
opened 2015-08-28 21:45:18 +02:00 by Dolphin Dream · 13 comments
Member

System Information
OS: Ubuntu 14.04 (64 bit)
RAM : 7.8 GiB
CPU: Intel® Core™ i5-2400 CPU @ 3.10GHz × 4
GFX: GeForce GT 520/PCIe/SSE2

Blender Version
2.75 (hash 9b3fa88)

Short description of error
Ocean modifier with time keyframed does not animate after creating action-strip in NLA editor.

Exact steps for others to reproduce the error
See the attached blend. A simple plane with ocean modifier added to it with time animated with 2 keyframes (linear interpolation). The ocean animates fine... but once I push the animation on the NLA stack (in NLA editor / add action-strip) the ocean no longer animates. I noticed that the ocean does animate however once you hit TAB to enter the edit mode in NLA action-strip. I also tried to animate the NLA strip time (with keyframes) but still the ocean does not animate.

Note: Aligorith suggested this may be a bug in the old depsgraph and asked me to mention todo notes written in depsgraph.c - 2036.

oceanModNLARetimingBug.blend

**System Information** OS: Ubuntu 14.04 (64 bit) RAM : 7.8 GiB CPU: Intel® Core™ i5-2400 CPU @ 3.10GHz × 4 GFX: GeForce GT 520/PCIe/SSE2 **Blender Version** 2.75 (hash 9b3fa88) **Short description of error** Ocean modifier with time keyframed does not animate after creating action-strip in NLA editor. **Exact steps for others to reproduce the error** See the attached blend. A simple plane with ocean modifier added to it with time animated with 2 keyframes (linear interpolation). The ocean animates fine... but once I push the animation on the NLA stack (in NLA editor / add action-strip) the ocean no longer animates. I noticed that the ocean does animate however once you hit TAB to enter the edit mode in NLA action-strip. I also tried to animate the NLA strip time (with keyframes) but still the ocean does not animate. Note: Aligorith suggested this may be a bug in the old depsgraph and asked me to mention todo notes written in depsgraph.c - 2036. [oceanModNLARetimingBug.blend](https://archive.blender.org/developer/F228810/oceanModNLARetimingBug.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MariusGiurgi

Added subscriber: @MariusGiurgi

Added subscriber: @sindra1961

Added subscriber: @sindra1961

If you choose the action in Action Editor of DopeSheet, it should works again.
oceanModNLARetimingBug.png

If you choose the action in Action Editor of DopeSheet, it should works again. ![oceanModNLARetimingBug.png](https://archive.blender.org/developer/F228865/oceanModNLARetimingBug.png)
Author
Member

In #45938#331077, @sindra1961 wrote:
If you choose the action in Action Editor of DopeSheet, it should works again.
oceanModNLARetimingBug.png

Yeah, except that now it’s not the pushed NLATrack (action strip) that is animating, but the PlaneAction on top of it. If the NLATrack pushed on the stack had its time remapped (e.g. animate/keyframe the Strip-Time), this animation would not play when you make the selection like had you mentioned. What is animating is the action that is not yet pushed onto the NLA stack as an action strip. (note the PlaneAction on top of the action-strip in your screenshot)

> In #45938#331077, @sindra1961 wrote: > If you choose the action in Action Editor of DopeSheet, it should works again. > ![oceanModNLARetimingBug.png](https://archive.blender.org/developer/F228865/oceanModNLARetimingBug.png) Yeah, except that now it’s not the pushed NLATrack (action strip) that is animating, but the PlaneAction on top of it. If the NLATrack pushed on the stack had its time remapped (e.g. animate/keyframe the Strip-Time), this animation would not play when you make the selection like had you mentioned. What is animating is the action that is not yet pushed onto the NLA stack as an action strip. (note the PlaneAction on top of the action-strip in your screenshot)
{[F228878](https://archive.blender.org/developer/F228878/oceanModNLARetimingBug2.png)}![oceanModNLARetimingBug3.png](https://archive.blender.org/developer/F228880/oceanModNLARetimingBug3.png)
Joshua Leung self-assigned this 2015-08-29 06:02:27 +02:00

I'm sorry, I seemed to misunderstand the meaning of your question.

I'm sorry, I seemed to misunderstand the meaning of your question.
Author
Member

Sindra, try to push the action onto the NLA stack (creating a new action-strip).. then try to animate the Strip Time of that strip, effectively remapping its time. See if you succeed to get the ocean animation to go from normal speed to slow-mo speed as you playback. It seems that aligorith thinks it's probably a Dependency Graph issue.

Sindra, try to push the action onto the NLA stack (creating a new action-strip).. then try to animate the Strip Time of that strip, effectively remapping its time. See if you succeed to get the ocean animation to go from normal speed to slow-mo speed as you playback. It seems that aligorith thinks it's probably a Dependency Graph issue.

This comment was removed by @sindra1961

*This comment was removed by @sindra1961*

I'm sorry, some expression was different.
It works when I make a similar object in new dependency graph, but does not work even if I make a similar object in old dependency graph.
The attached blend file does not work in new dependency graph either.

I'm sorry, some expression was different. It works when I make a similar object in new dependency graph, but does not work even if I make a similar object in old dependency graph. The attached blend file does not work in new dependency graph either.

It works when I make it in new dependency graph, but it does not work when I save it and reload it.

It works when I make it in new dependency graph, but it does not work when I save it and reload it.

This issue was referenced by 9683807459

This issue was referenced by 9683807459947330d50e8e38edae430d10d53ffc
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45938
No description provided.